web-app/frontend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: frontend:dev
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "1000m"
            memory: "2048Mi"
          requests:
            cpu: "200m"
            memory: "1024Mi"
